<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoosterPG+</string>
    <string name="action_settings">Instellingen</string>
    <string name="placeholder_text"/>

    <!-- Action Bar -->
    <string name="action_bar_button_refresh">Herlaad</string>
    <string name="action_bar_dropdown_week">Week</string>
    <string name="action_bar_dropdown_persoonlijk_rooster"> - Eigen rooster</string>
    <string name="action_bar_dropdown_klassenrooster"> - Klassenrooster</string>
    <string name="action_bar_dropdown_docentenrooster"> - Docentenrooster</string>
    <string name="action_bar_dropdown_lokalenrooster">- Lokalenrooster</string>
    <string name="action_bar_dropdown_leerlingrooster">- Leerlingrooster</string>
    <string name="action_bar_dropdown_speciaal_rooster"> - Speciaal rooster</string>
    <string name="search_hint">Zoek roosters</string>

    <!-- Drawer -->
    <string name="drawer_close">Sluit menu</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_item_persoonlijk_rooster">Persoonlijk rooster</string>
    <string name="drawer_item_klassenrooster">Klassenrooster</string>
    <string name="drawer_item_docentenrooster">Docentenrooster</string>
    <string name="drawer_item_lokaalrooster">Lokalenrooster</string>
    <string name="drawer_item_leerlingrooster">Leerlingrooster</string>
    <string name="drawer_item_roosterwijzigingen">Roosterwijzigingen</string>
    <string name="drawer_algemene_mededelingen">Algemene mededelingen</string>
    <string name="drawer_group_rooster">Roosters</string>
    <string name="drawer_group_pgtv">PGTV</string>

    <!-- Rooster -->
    <string name="rooster_dubbel_uur">Dubbel uur</string>
    <string name="rooster_weekdag">Weekdag</string>
    <string name="rooster_datum">Datum</string>
    <string name="rooster_vak">Vak</string>
    <string name="rooster_lokaal">Lokaal</string>
    <string name="rooster_leraar">Leraar</string>
    <string name="rooster_vervallen">Vervallen</string>
    <string name="rooster_tijden">Tijden</string>
    <string name="rooster_docenten_desc">Kies een vak en daarna een docent: </string>
    <string name="rooster_klas_desc">Kies een klas: </string>
    <string name="rooster_lokaal_desc">Kies een lokaal: </string>
    <string name="rooster_leerling_desc">Kies een leerling: </string>
    <string name="rooster_leerling_leerlingNummer_hint">… of vul een leerlingnummer of naam in</string>
    <string name="rooster_klas_klasSpinner_placeholder">Klas…</string>
    <string name="rooster_docenten_vakspinner_placeholder">Vak…</string>
    <string name="rooster_docenten_docentspinner_placeholder">Docent…</string>
    <string name="rooster_lokaal_lokaalSpinner_placeholder">Lokaal…</string>
    <string name="rooster_leerling_klasSpinner_placeholder">Klas…</string>
    <string name="rooster_leerling_leerlingSpinner_placeholder">Leerling…</string>

    <!-- Logindialog -->
    <string name="logindialog_title">Log in</string>
    <string name="logindialog_tabs_userpass">RoosterPG+</string>
    <string name="logindialog_tabs_llnr">Leerlingnummer</string>
    <string name="logindialog_loginbutton">Log in</string>
    <string name="logindialog_cancelbutton">Annuleer</string>
    <string name="logindialog_registerbutton">Registreer</string>
    <string name="logindialog_userpass_desc">Log in met een bestaand RoosterPG+-account</string>
    <string name="logindialog_username_hint">Gebruikersnaam</string>
    <string name="logindialog_password_hint">Wachtwoord</string>
    <string name="logindialog_llnr_desc">Log in met je leerlingnummer</string>
    <string name="logindialog_llnr_hint">Leerlingnummer</string>
    <string name="logindialog_warning_title">Doorgaan?</string>
    <string name="logindialog_warning_text">Er bestaat al een RoosterPG+-account met dit leerlingnummer. Wilt u alsnog een nieuw account aanmaken?</string>
    <string name="logindialog_warning_submitButton">Nieuw account</string>
    <string name="logindialog_warning_cancelButton">Inloggen op account</string>

    <!-- Registerdialog -->
    <string name="registerdialog_leerling_text">Registreer je als leerling</string>
    <string name="registerdialog_leerling_tab">Leerling</string>
    <string name="registerdialog_leraar_text">Registreer je als docent</string>
    <string name="registerdialog_leraar_tab">Leraar</string>
    <string name="registerdialog_registerbutton">Registreer</string>
    <string name="registerdialog_cancelbutton">Annuleer</string>
    <string name="registerdialog_email_hint">Emailadres (optioneel)</string>
    <string name="registerdialog_repass_hint">Wachtwoord (bevestiging)</string>
    <string name="registerdialog_title">Registreer</string>

    <!-- Extenddialog -->
    <string name="extenddialog_text">Upgrade je leerlingaccount</string>
    <string name="extenddialog_extendbutton">Upgrade</string>
    <string name="extenddialog_isExtended">Dit account is al geüpgraded!</string>
    <string name="extenddialog_title">Upgrade account</string>

    <!-- Settings -->
    <string name="settings_user_title">Gebruiker</string>
    <string name="settings_background_title">Notificaties</string>
    <string name="settings_other_title">Overig</string>
    <string name="settings_info_title">Over de app</string>
    <string name="settings_notifications_title">Notificaties</string>
    <string name="settings_notifications_summary">Meldingen die de volgende les aangeven</string>
    <string name="settings_notificationsInterval_summary">Hoeveel minuten voor aanvang van de les de melding getoond moet worden</string>
    <string name="settings_notificationInterval_title">Weergavetijd</string>
    <string name="settings_user_clusterklassen_title">Clusterklassen</string>
    <string name="settings_user_clusterklassen_summary">Kies de clusterklassen die in jouw rooster missen</string>
    <string name="settings_user_upgrade_summary">Voltooi je registratie voor volledige personalisatie</string>
    <string name="settings_user_upgrade_title">Registratie voltooien</string>
    <string name="settings_user_relogin_summary">Log in als een andere gebruiker</string>
    <string name="settings_user_relogin_title">Andere gebruiker</string>
    <string name="settings_user_resetClusterklassenSummary">Herstel je clusterklassen naar het origineel</string>
    <string name="settings_user_resetClusterklassenTitle">Herstel clusterklassen</string>
    <string name="settings_user_changeUsername_title">Gebruikersnaam wijzigen</string>
    <string name="settings_user_changePassword_title">Wachtwoord wijzigen</string>
    <string name="settings_about_app_desc">Dit is een app om het rooster van Infoweb op een handige en makkelijke manier te tonen op Android</string>

    <!-- Showcaseviews -->
    <string name="showcaseview_weekkeuze_title">Weekkeuze</string>
    <string name="showcaseview_weekkeuze_content">Kies hier de week die je wil weergeven</string>
    <string name="showcaseview_zoeken_title">Zoek in roosters</string>
    <string name="showcaseview_zoeken_content"><![CDATA[Vul hier een klas, docent, leerlingnummer of \'ik\' in en krijg het rooster.\nTip: Met \' & \' kan je roosters combineren]]></string>
    <string name="internet_connection_warning">Geen internetverbinding</string>
    <string name="rooster_null">Geen les gevonden!</string>

    <string-array name="settings_notification_firstShow">
        <item>5 minuten</item>
        <item>10 minuten</item>
        <item>15 minuten</item>
        <item>30 minuten</item>
        <item>1 uur</item>
        <item>2 uur</item>
    </string-array>
    <string-array name="settings_notification_firstShow_values">
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
    </string-array>

    <string name="title_activity_pgtv">PGTVActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pgtv_null">Geen gegevens gevonden!</string>
    <string name="PGTV_Title">PGTV</string>

    <!-- DashClock -->
    <string name="next_uur_dashclock_title">RoosterPG+ Volgende uur</string>
    <string name="dialog_changeUsername_desc">Verander je gebruikersnaam. Huidige gebruikersnaam:</string>
    <string name="dialog_changeUsername_hint">Nieuwe gebruikersnaam</string>
    <string name="dialog_changeUsername_title">Wijzig gebruikersnaam</string>
    <string name="dialog_changeUsername_button_change">Wijzig</string>
    <string name="dialog_changeUsername_button_cancel">Annuleer</string>

</resources>
