<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_hint"
        app:showAsAction="never|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_bar_button_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>