<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="?attr/actionBarSize"
    android:orientation="vertical">

    <TextView
        android:id="@+id/action_bar_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_bar_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar_app_name"
        android:text="@string/action_bar_dropdown_week"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/action_bar_dropdown_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar_app_name"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/action_bar_text_field"
        android:text="@string/action_bar_dropdown_persoonlijk_rooster"
        android:textColor="#888"
        android:textSize="12sp" />

</RelativeLayout>