<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DialogTabs"
    android:layout_width="match_parent"
    android:layout_height="500dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/Tab_UserPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="6dp"
                    android:text="@string/logindialog_userpass_desc"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/logindialogusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:hint="@string/logindialog_username_hint"
                    android:paddingBottom="10dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/logindialogpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:hint="@string/logindialog_password_hint"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Tab_LLNR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="6dp"
                    android:text="@string/logindialog_llnr_desc"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/logindialogllnr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logindialog_llnr_hint"
                    android:inputType="number" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</TabHost>