<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="3dp"
    android:background="@drawable/basic_rect_nobottom"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="9dp"
        android:paddingTop="2dp"
        android:background="@drawable/diagonal_stripes"
        android:id="@+id/optioneel_container">

        <TextView
            android:id="@+id/layers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:layout_marginRight="2dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rooster_vak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/rooster_vak"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rooster_lokaal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rooster_vak"
            android:layout_marginLeft="3dp"
            android:text="@string/rooster_lokaal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rooster_leraar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rooster_vak"
            android:layout_marginRight="3dp"
            android:text="@string/rooster_leraar"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/rooster_tijden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rooster_lokaal"
            android:layout_margin="3dp"
            android:text="@string/rooster_tijden"
            android:textSize="15sp" />

    </RelativeLayout>
</RelativeLayout>