<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@android:id/tabcontent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:id="@+id/Tab_Leerling">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:text="@string/extenddialog_text"
            android:textSize="17sp"
            android:textColor="@color/logindialog_textcolor"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extenddialog_username"
                android:paddingLeft="10dp"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:hint="@string/logindialog_username_hint"
                android:paddingBottom="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extenddialog_password"
                android:focusable="true"
                android:paddingLeft="10dp"
                android:fontFamily="sans-serif"
                android:hint="@string/logindialog_password_hint"
                android:inputType="textPassword"
                android:paddingBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extenddialog_passwordcheck"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:paddingLeft="10dp"
                android:hint="@string/registerdialog_repass_hint"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extenddialog_email"
                android:paddingLeft="10dp"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:hint="@string/registerdialog_email_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</FrameLayout>